# pygscatalog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  codecov.yml  mypy.ini  pyproject.toml
.github/workflows/: calc-ci.yml  calc-publish.yml  calc-pytest.yml  calcapp-pytest.yml  calclib-pytest.yml  ci.yaml  combineapp-pytest.yml  core-ci.yaml  core-publish.yml  core-pytest.yml  corelib-publish.yml  corelib-pytest.yml  downloadapp-pytest.yml  match-ci.yml  match-publish.yml  match-pytest.yml  matchapp-pytest.yml  matchlib-pytest.yml  publish.yml  pypi.yml  pytest.yaml  ruff.yml  utils-build-dev.yml  utils-build-publish.yml  utils-publish.yml
corelib/: pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/_templates/autoapi/: index.rst
docs/autoapi/: index.rst
docs/how-to/: index.rst
downloadapp/: pyproject.toml
pgscatalog.calc/: README.md  noxfile.py  pyproject.toml
pgscatalog.calc/src/pgscatalog/calc/: __init__.py
pgscatalog.calc/src/pgscatalog/calc/cli/: __init__.py  aggregate_cli.py  ancestry_cli.py
pgscatalog.calc/src/pgscatalog/calc/lib/: _config.py  polygenicscore.py  principalcomponents.py
pgscatalog.calc/src/pgscatalog/calc/lib/_ancestry/: read.py  tools.py
pgscatalog.calc/tests/: test_aggregate.py  test_ancestry.py
pgscatalog.calc/tests/data/: aggregated_scores.txt  hgdp_5_additive_0.sscore.zst  hgdp_8_additive_0.sscore.zst  ref.pcs  target.pcs
pgscatalog.calc/tests/data/aggregate/: cineca_22_additive_1.sscore.vars
pgscatalog.calcapp/: README.md  pyproject.toml
pgscatalog.calcapp/src/pgscatalog/calcapp/: aggregate_cli.py  ancestry_cli.py
pgscatalog.calcapp/tests/: test_aggregate.py  test_ancestry.py
pgscatalog.calcapp/tests/testdata/: hgdp_6_additive_0.sscore.zst
pgscatalog.calclib/: README.md  pyproject.toml
pgscatalog.calclib/src/pgscatalog/calclib/: __init__.py  _config.py  polygenicscore.py  principalcomponents.py  testclass.py
pgscatalog.calclib/src/pgscatalog/calclib/_ancestry/: read.py  tools.py
pgscatalog.calclib/src/pgscatalog/calclib/ancestry/: read.py  tools.py
pgscatalog.calclib/tests/: cineca_22_additive_0.sscore.zst
pgscatalog.combineapp/: README.md  pyproject.toml
pgscatalog.combineapp/src/pgscatalog/combineapp/: __init__.py  _combine.py  cli.py  relabel_cli.py
pgscatalog.combineapp/tests/: test_cli.py  test_combine_cli.py  test_relabel_cli.py
pgscatalog.combineapp/tests/testdata/lift/: PGS000001_hmPOS_GRCh37.txt
pgscatalog.core/: CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml
pgscatalog.core/src/pgscatalog/core/: __init__.py
pgscatalog.core/src/pgscatalog/core/cli/: _combine.py  combine_cli.py  download_cli.py  format_cli.py  normalise.py  relabel_cli.py
pgscatalog.core/src/pgscatalog/core/lib/: __init__.py  _config.py  _download.py  _normalise.py  _read.py  _relabel.py  _sortpaths.py  allele.py  catalogapi.py  catalogscorevariant.py  models.py  pgsexceptions.py  scorefiles.py  scorevariant.py  targetvariants.py
pgscatalog.core/tests/: test_combine_cli.py  test_format_cli.py  test_relabel_cli.py
pgscatalog.core/tests/data/: PGS000001_hmPOS_GRCh37.txt  complex_variants_PGS000021.txt  custom.txt  hgdp_ALL_additive_0.scorefile  invalid_scorefile.txt
pgscatalog.core/tests/data/chain/: README
pgscatalog.core/tests/data/lift/: PGS000001_hmPOS_GRCh38.txt
pgscatalog.corelib/: README.md  pyproject.toml
pgscatalog.corelib/src/pgscatalog/corelib/: __init__.py  _config.py  _download.py  _normalise.py  _read.py  build.py  catalogapi.py  config.py  genomebuild.py  pgsexceptions.py  relabel.py  scorefiles.py  scorevariant.py  targetvariants.py
pgscatalog.corelib/tests/: PGS000001_hmPOS_GRCh38.txt  PGS000802_hmPOS_GRCh37.txt  hapnest.pvar
pgscatalog.downloadapp/: README.md  pyproject.toml
pgscatalog.downloadapp/src/pgscatalog/downloadapp/: README.md  __init__.py  cli.py
pgscatalog.downloadapp/tests/: test_cli.py
pgscatalog.match/: README.md  noxfile.py  pyproject.toml
pgscatalog.match/src/pgscatalog/match/: __init__.py
pgscatalog.match/src/pgscatalog/match/cli/: _write.py  intersect_cli.py  match_cli.py  merge_cli.py
pgscatalog.match/src/pgscatalog/match/lib/: __init__.py  _arrow.py  _plinkframe.py  matchresult.py  plinkscorefiles.py  scoringfileframe.py  targetvariants.py  variantframe.py
pgscatalog.match/src/pgscatalog/match/lib/_match/: filter.py  label.py  log.py  match.py  plink.py  preprocess.py
pgscatalog.match/tests/: test_intersect_cli.py  test_match_cli.py  test_merge_cli.py
pgscatalog.match/tests/data/: duplicated_scorefile.txt  good_match.pvar  hapnest.pvar.zst  ref.pvar.zst
pgscatalog.matchapp/: README.md  pyproject.toml
pgscatalog.matchapp/src/pgscatalog/matchapp/: __init__.py  _config.py  _write.py  match_cli.py  merge_cli.py
pgscatalog.matchapp/tests/: good_match_scorefile.txt  test_match_cli.py  test_merge_cli.py
pgscatalog.matchlib/: README.md  pyproject.toml
pgscatalog.matchlib/src/pgscatalog/matchlib/: __init__.py  _arrow.py  _plinkframe.py  matchresult.py  plinkframe.py  plinkscorefiles.py  scoringfileframe.py  variantframe.py
pgscatalog.matchlib/src/pgscatalog/matchlib/_match/: filter.py  label.py  log.py  plink.py  preprocess.py
pgscatalog.matchlib/tests/: bad_match.bim  good_match_scorefile.txt
pgscatalog.utils/: .dockerignore  Dockerfile  README.md  noxfile.py  pyproject.toml
pgscatalog.utils/docker/: build.Dockerfile  calc.Dockerfile  core.Dockerfile  dev.Dockerfile  dev.Dockerfile.dockerignore  pyproject.dev  utils.Dockerfile
pgscatalog.utils/src/pgscatalog/utils/: __init__.py
pgscatalog.utils/tests/: test_utils.py
pgscatalog.validate/: README.md  noxfile.py  pyproject.toml
pgscatalog.validate/src/pgscatalog/validate/cli/: validate_scorefile.py
pgscatalog.validate/src/pgscatalog/validate/lib/: common_constants.py  helpers.py  schemas.py  validate_scorefile.py  validator_base.py
pgscatalog.validate/src/pgscatalog/validate/lib/formatted/: validator.py
pgscatalog.validate/src/pgscatalog/validate/lib/harmonized_position/: validator.py
(+19 files in other folders)
