[tool.poetry]
name = "pgscatalog.calc"
version = "0.1.0"
description = ""
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>", "Samuel Lambert <sl925@medschl.cam.ac.uk>", "Laurent Gil <lg10@sanger.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
"pgscatalog.core" = "^0.1.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"

[tool.poetry.scripts]
pgscatalog-aggregate = 'pgscatalog.calc.cli.aggregate_cli:run_aggregate'
pgscatalog-ancestry-adjust = 'pgscatalog.calc.cli.ancestry_cli:run_ancestry'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
filterwarnings = ["error"]

[tool.coverage.run]
source = ['src/pgscatalog/calc']