[tool.poetry]
name = "pgscatalog-calcapp"
version = "0.1.0"
description = ""
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
"pgscatalog.calclib" = {path = "../pgscatalog.calclib", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
pgscatalog-aggregate = 'pgscatalog.downloadapp.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
filterwarnings = ["error"]