[tool.poetry]
name = "pgscatalog.combineapp"
version = "0.1.0"
description = "CLI application to standardise and combine polygenic scoring files"
license = "Apache-2.0"
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>", "Samuel Lambert <sl925@medschl.cam.ac.uk>", "Laurent Gil <lg10@sanger.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
"pgscatalog.corelib" = {path = "../pgscatalog.corelib", develop = true}
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pgscatalog-combine = 'pgscatalog.combineapp.combine_cli:run'
pgscatalog-relabel = 'pgscatalog.combineapp.relabel_cli:run'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ['src/pgscatalog/combineapp']