[tool.poetry]
name = "pgscatalog.corelib"
version = "0.1.0"
description = ""
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
