[tool.poetry]
name = "pgscatalog.corelib"
version = "0.1.0"
description = "Library for working with polygenic scores (PGS) and the PGS Catalog"
license = "Apache-2.0"
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
tenacity = "^8.2.3"
pyliftover = "^0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
