[tool.poetry]
name = "pgscatalog.downloadapp"
version = "0.1.0"
description = ""
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
"pgscatalog.calclib" = {path = "../pgscatalog.calclib/", develop = true}
"pgscatalog.corelib" = {path = "../pgscatalog.corelib/", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pgscatalog-download = 'pgscatalog.downloadapp.cli:run'