[tool.poetry]
name = "pgscatalog.match"
version = "0.1.0"
description = "Tools for matching variants in PGS scoring files and target variant information files"
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>", "Samuel Lambert <sl925@medschl.cam.ac.uk>", "Laurent Gil <lg10@sanger.ac.uk>"]
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
"pgscatalog.core" = "^0.1.0"
polars = "^0.20.5"
pyarrow = "^15.0.0"

[tool.poetry.scripts]
pgscatalog-match = 'pgscatalog.match.cli.match_cli:run_match'
pgscatalog-matchmerge = 'pgscatalog.match.cli.merge_cli:run_merge'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
filterwarnings = ["error"]

[tool.coverage.run]
source = ['src/pgscatalog/match']