[tool.poetry]
name = "pgscatalog-matchapp"
version = "0.1.0"
description = ""
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.11"
"pgscatalog.matchlib" = {path = "../pgscatalog.matchlib", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
pgscatalog-match = 'pgscatalog.matchapp.match_cli:run_match'
pgscatalog-matchmerge = 'pgscatalog.matchapp.merge_cli:run_merge'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
