[tool.poetry]
name = "pgscatalog-utils"
version = "1.4.2"
description = "Utilities for working with PGS Catalog API and scoring files"
authors = ["Benjamin Wingfield <bwingfield@ebi.ac.uk>", "Samuel Lambert <sl925@medschl.cam.ac.uk>", "Laurent Gil <lg10@sanger.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "pgscatalog", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
"pgscatalog.calc" = "^0.3.0"
"pgscatalog.core" =  "^0.3.2"
"pgscatalog.match" =  "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
