[project]
name = "pgscatalog-utils"
version = "2.0.0"
description = "Utilities for working with PGS Catalog API and scoring files"
license = "Apache-2.0"
authors = [
    {name = "Benjamin Wingfield", email = "bwingfield@ebi.ac.uk"},
    {name = "Samuel Lambert", email = "sl925@medschl.cam.ac.uk"},
    {name = "Laurent Gil", email = "lg10@sanger.ac.uk"},
    {name = "Florent Yvon", email = "fy279@cam.ac.uk"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"

dependencies = [
    "pgscatalog-calc",
    "pgscatalog-core",
    "pgscatalog-match",
]

# https://peps.python.org/pep-0735/
[dependency-groups]
lint = [
    "ruff>=0.9.4",
    "mypy>=1.14.1"
    ]
test = [
    "coverage>=7.8.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
filterwarnings = ["error"]
addopts = "--ignore packages"
pythonpath = [
  "src"
]
consider_namespace_packages = true

[tool.coverage.run]
source = ["src/pgscatalog/utils", "tests"]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pgscatalog-core = { workspace = true }
pgscatalog-calc = { workspace = true }
pgscatalog-match = { workspace = true }

[tool.mypy]
files = ["src/**/*.py"]
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_calls = false
disallow_incomplete_defs = true

[tool.setuptools.packages.find]
where = ["src"]
